--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-filelock==3.0.12
-Flask==1.1.2
-importlib-metadata==1.6.1
 numpy==1.19.2
-packaging==20.4
 pandas==1.1.3
-flasgger==0.9.3
-joblib==0.17.0
 scipy>=1.5.3
 lightfm==1.15
 pyarrow==5.0.0
+scikit-learn
